# simplesoft_mujoco

./: .gitignore  CMakeLists.txt  README.md  README_install.md  README_zh_CN.md  build_whl.sh
cmake/: MujocoOptions.cmake
controller/: CMakeLists.txt  SittingPose.cc
model/plugin/hrpc/: hrpc_xiaoliu.xml  human_skeleton.xml  sitting_pose.xml  woodChair.xml  xiao6_left_upper_arm.xml  xiaoliu.xml
model/plugin/hrpc/human_skel/meshes/: foot_L.stl  foot_R.stl  forearm_R.stl  hand_L.stl  pelvis.stl  shank_L.stl  upper_arm_L.stl
model/plugin/hrpc/soft_config/: config_test_human_left_arm.json  human_left_arm2.json  left_upper_arm.json
model/plugin/hrpc/soft_config/res_human_left_arm2/: human_left_arm.2.ele  human_left_arm.2.node  human_left_arm2.json  human_left_arm2.yaml
model/plugin/hrpc/xiaoliu/meshes/: LINK_BASE_R.STL  LINK_ELBOW_R0.STL  LINK_ELBOW_R1.STL  LINK_F0_L1.STL  LINK_F1_L0.STL  LINK_F1_L2.STL  LINK_F2_L2.STL  LINK_HAND_BASE_L.STL  LINK_HAND_BASE_R.STL  LINK_NECK_M0.STL  LINK_SHOULDER_L0.STL  LINK_SHOULDER_L2.STL  LINK_SHOULDER_R2.STL  LINK_WRIST_L0.STL
model/plugin/hrpc/xiaoliu/mujoco_models/: empty_scene.xml
model/plugin/robots/: humanoid_arm.xml  soft_xiaoliu.xml  soft_xiaowu.xml  xiaoliu.xml  xiaowu_soft_old.xml  xman_v1.2_old.xml
model/plugin/robots/drivers/hands/trx_hand5/description/meshes/v1/: LINK_BASE.STL  LINK_F0_CMP.STL  LINK_F0_CMR.STL  LINK_F0_IP.STL  LINK_F0_MPP.STL  LINK_F1_DIP.STL  LINK_F1_MPP.STL  LINK_F1_MPR.STL  LINK_F1_PIP.STL  LINK_F2_DIP.STL  LINK_F2_MPP.STL  LINK_F2_MPR.STL  LINK_F2_PIP.STL  LINK_F3_DIP.STL  LINK_F3_MPP.STL  LINK_F3_MPR.STL  LINK_F3_PIP.STL  LINK_F4_DIP.STL  LINK_F4_MPP.STL  LINK_F4_MPR.STL  LINK_F4_PIP.STL
model/plugin/robots/drivers/hands/trx_hand5/description/meshes/v1/left/: LINK_PALM.STL  LINK_WRIST_1.STL  LINK_WRIST_2.STL
model/plugin/robots/drivers/hands/trx_hand5/description/meshes/v1/right/: LINK_PALM.STL
model/plugin/robots/drivers/hands/trx_hand5/description/meshes/v2/: LINK_F0_CMP.STL  LINK_F0_CMR.STL  LINK_F0_IP.STL  LINK_F0_MPP.STL  LINK_F1_DIP.STL  LINK_F1_MPP.STL  LINK_F1_MPR.STL  LINK_F1_PIP.STL  LINK_F2_MPP.STL  LINK_F2_MPR.STL  LINK_F2_PIP.STL  LINK_F3_MPP.STL  LINK_F3_PIP.STL  LINK_F4_PIP.STL
model/plugin/robots/drivers/manipulators/trx_arm_gen2/description/meshes/v1/: LINK_ELBOW_2.STL  LINK_SHOULDER_2.STL  LINK_WRIST_1.STL
model/plugin/robots/drivers/manipulators/trx_arm_gen2/description/meshes/v2/: LINK_BASE.STL  LINK_ELBOW_1.STL  LINK_ELBOW_2.STL  LINK_SHOULDER_1.STL  LINK_SHOULDER_2.STL  LINK_SHOULDER_3.STL  LINK_WRIST_1.STL  LINK_WRIST_2.STL
model/plugin/robots/human_arm/: human_arm.urdf
model/plugin/robots/human_arm/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  Link7.STL  base_link.STL  skin_arm.STL
model/plugin/robots/simpleTable/: simpleWoodChair_body.xml  simpleWoodTable_body.xml
model/plugin/robots/simplesoft/: humanoid_base.xml  humanoid_body.xml  humanoid_keyframes_all.xml  humanoid_keyframes_human.xml  soft.xml  soft2.xml
model/plugin/robots/xiaoliu/: xiaoliu.rviz  xiaoliu.urdf
model/plugin/robots/xiaoliu/meshes/: LINK_BASE_L.STL  LINK_ELBOW_L0.STL  LINK_ELBOW_L1.STL  LINK_F0_L0.STL  LINK_F0_L2.STL  LINK_F1_L1.STL  LINK_F2_L0.STL  LINK_F2_L1.STL  LINK_NECK_M1.STL  LINK_SHOULDER_L1.STL  LINK_SHOULDER_R0.STL  LINK_SHOULDER_R1.STL  LINK_WAIST_M0.STL  LINK_WRIST_L1.STL  LINK_WRIST_R0.STL  LINK_WRIST_R1.STL
model/plugin/robots/xiaoliu/mujoco_models/: xiaoliu.xml
model/plugin/simplesoft/: config_test_human_left_arm.json  config_test_human_left_shoulder.json  config_test_human_neck.json  config_test_model.json  config_test_model2.json  human_body_without_left_arm.stl  human_body_without_left_shoulder.stl  human_body_without_neck.stl  human_skeleton.urdf  human_skeleton.xml  humanoid.xml  humanoid_base.xml  humanoid_body.xml  humanoid_keyframes_all.xml  humanoid_keyframes_robot.xml  scene.xml  soft2.xml  soft_test_human_left_arm.xml  soft_test_human_left_shoulder.xml  soft_test_human_neck.xml  soft_test_model.xml  soft_test_model2.xml
model/plugin/simplesoft/meshes/: forearm_L.stl  hand_R.stl  shank_R.stl  thigh_L.stl  thigh_R.stl  torso.stl  upper_arm_R.stl
model/plugin/simplesoft/test/: config.json  test_model.1.face  test_model.json  test_model.yaml
model_tools/: README.md  copy_model.py  generate_samples.py  model_generation.py  visualization.py
model_tools/human_left_arm/: human_left_arm.1.edge  human_left_arm.1.face  human_left_arm.1.node  human_left_arm.json  human_left_arm.poly  human_left_arm.yaml  skin-skeleton-regular.stl
model_tools/human_left_shoulder/: human_left_shoulder.1.edge  human_left_shoulder.1.ele  human_left_shoulder.1.face  human_left_shoulder.1.node  human_left_shoulder.json  human_left_shoulder.poly  human_left_shoulder.yaml  skin_left_shoulder.stl
model_tools/human_neck/: human_neck.1.edge  human_neck.1.ele  human_neck.1.face  human_neck.1.node  human_neck.json  human_neck.poly  human_neck.yaml  skin_neck.stl
model_tools/left_upper_arm/: left_upper_arm.1.edge  left_upper_arm.1.ele  left_upper_arm.1.face  left_upper_arm.1.node  left_upper_arm.json  left_upper_arm.poly  left_upper_arm.stl  left_upper_arm.yaml
model_tools/test_model/: skeleton.stl  skin.stl  test_model.1.edge  test_model.1.ele  test_model.1.node  test_model.poly  test_model.yaml  test_model_element.txt  test_model_face.txt  test_model_points.txt
plugin/hrpc/: CMakeLists.txt  HumanRobotPhysicalContact.cc  HumanRobotPhysicalContact.hh  PhyscisEngineData.cc  PhyscisEngineData.hh  SoftDef.cc  SoftDef.hh  SoftHelper.cc  SoftHelper.hh  register.cc
plugin/simplesoft/: CMakeLists.txt  PhyscisEngineData.cc  PhyscisEngineData.hh  Soft.cc  Soft.hh  SoftDef.cc  SoftDef.hh  SoftHelper.cc  SoftHelper.hh  register.cc
(+2 files in other folders)
